Add  button and elements to be able to create function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="row test">
+            <button type="button" class="btn btn-secondary btn-lg " id="start" onclick="Start()">Play</button>
+        </div>
+       
+    </div>
  <!-- JQuery -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Bootstrap tooltips -->
