--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
      <div>Time Remaining: <span id="time">05:00</span> minutes</div>
       <div>Score: <span id="score">0</span></div>
+      <div>Lives: <span id="lives">3</span></div>
     <div class="container">
         <div class="row test">
             <button type="button" class="btn btn-secondary btn-lg " id="start" onclick="Start()">Play</button>
