--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div>Score: <span id="score">0</span></div>
       <div>Lives: <span id="lives">3</span></div>
     <div class="container">
-        <div class="row test">
+        <div class="row game">
             <button type="button" class="btn btn-secondary btn-lg " id="start" onclick="Start()">Play</button>
         </div>
        
