--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Document</title>
 </head>
 <body>
-     <div>Time Remaining: <span id="time">05:00</span> minutes</div>
+      <div>Registration closes in <span id="time">05:00</span> minutes!</div>
       <div>Score: <span id="score">0</span></div>
       <div>Lives: <span id="lives">3</span></div>
     <div class="container">
         <div class="row game">
-            <button type="button" class="btn btn-secondary btn-lg " id="start" onclick="Start()">Play</button>
+            <button type="button" class="btn btn-secondary btn-lg " id="start" onclick="Startgame()">Play</button>
         </div>
        
     </div>
