fix issue with timer now when time runs out it goes to guess links part

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-      <div>Registration closes in <span id="time">05:00</span> minutes!</div>
+      <div>Time Remaing: <span id="time">05:00</span>minutes</div>
       <div>Score: <span id="score">0</span></div>
       <div>Lives: <span id="lives">3</span></div>
     <div class="container">
