--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="results">
        <div class="row">
            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
-                <div class="test">Time Remaing: <span id="time">05:00</span>minutes</div>
+                <div class="test my-5">Time Remaing: <span id="time">05:00</span>minutes</div>
            </div>
            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
-               <div  class="test">Score: <span id="score">0</span></div>
+               <div  class="test my-5">Score: <span id="score">0</span></div>
            </div>
            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
-                <div  class="test">Lives: <span id="lives">3</span></div>
+                <div  class="test my-5">Lives: <span id="lives">3</span></div>
            </div>
        </div>
         <div class="row game d-flex justify-content-center">
