--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            </div>
        </div>
         <div class="row game d-flex justify-content-center">
-            <button type="button" class="btn btn-secondary btn-lg my-5 " id="start" onclick="Startgame()">Play</button>
+            <button type="button" class="btn btn-secondary btn-lg my-5 buttons my-5" onclick="Startgame()">Play</button>
         </div>
        
     </div>
