--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
            </div>
        </div>
         <div class="row game d-flex justify-content-center">
-            <button type="button" class="btn btn-secondary btn-lg my-5 buttons my-5" onclick="Startgame()">Play</button>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                 <h1 class="text-center mt-5 endtext ">Word Connect</h1>
+                 <br>
+                 <br>
+            <h3 class="text-center  endtext col-lg-12 col-md-12 col-sm-12 col-xs-12">Press Play to Begin</h3>
+            </div>
+              <button type="button" class="btn btn-secondary btn-lg my-5 buttons" onclick="Startgame()">Play</button>
+           
         </div>
        
     </div>
