--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Font Awesome -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" type="text/css" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" />
@@ -11,30 +13,28 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="results">
-       <div class="row">
-           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
-                <div class="test my-5">Time Remaing: <span id="time">05:00</span>minutes</div>
+    <div class="container mt-5" >
+       <div class="row top-line">
+           <div class="col-lg-2 offset-lg-1 col-md-4 col-sm-4 col-xs-4 ">
+                <h5><span id="time">05:00</span></h5>
            </div>
-           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
-               <div  class="test my-5">Score: <span id="score">0</span></div>
+           <div class="col-lg-2 offset-lg-2 col-md-4 col-sm-4 col-xs-4 ">
+               <h5>Score: <span id="score">0</span></h5>
            </div>
-           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
-                <div  class="test my-5">Lives: <span id="lives">3</span></div>
+           <div class="col-lg-2 offset-lg-2 col-md-4 col-sm-4 col-xs-4">
+                <h5 >Lives:   <i class="fas fa-heart 1"></i>   <i class="fas fa-heart 2"></i>   <i class="fas fa-heart 3"></i></h5>
            </div>
-       </div>
+        </div>
         <div class="row game d-flex justify-content-center">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                 <h1 class="text-center mt-5 endtext ">Word Connect</h1>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                 <h1 class="text-center mt-5">Word Connect</h1>
                  <br>
                  <br>
-            <h3 class="text-center  endtext col-lg-12 col-md-12 col-sm-12 col-xs-12">Press Play to Begin</h3>
+            <h3 class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">Press Play to Begin</h3>
             </div>
-              <button type="button" class="btn btn-secondary btn-lg my-5 buttons" onclick="Startgame()">Play</button>
+              <button type="button" class="btn mt-5" onclick="Startgame()">Play</button>
            
         </div>
-       
     </div>
  <!-- JQuery -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
