--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                      <li class="nav-item active">
-                        <a class="nav-link" href="#">How To Play<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#game">Play Game<span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Play Game</a>
+                        <a class="nav-link" href="#play">How To Play</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="#">Add Game</a>
