--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="#play">How To Play</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Add Game</a>
+                        <a class="nav-link" href="#create">Add Game</a>
                      </li>
                   </ul>
                </div>
@@ -59,7 +59,22 @@
     </div>
     </section>
       <section id="play">
-          <h2>How to play</h2>
+          <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center">
+                     <h1 class="text center">How to play</h1>
+                </div>
+                 <div class="col-lg-12 d-flex justify-content-center">
+                     <h3 class="text center">How to play</h3>
+                </div>
+          </div>
+      </section>
+
+       <section id="create">
+          <div class="row">
+                <div class="col-lg-12 d-flex justify-content-center">
+                     <h1 class="text center">How to play</h1>
+                </div>
+          </div>
       </section>
       
      <footer class="container-fluid  pt-4 pb-2">
