--- a/index.html
+++ b/index.html
@@ -70,11 +70,28 @@
       </section>
 
        <section id="create">
-          <div class="row">
-                <div class="col-lg-12 d-flex justify-content-center">
-                     <h1 class="text center">How to play</h1>
-                </div>
-          </div>
+          <div class="container mt-5" >
+        <div class="row game d-flex justify-content-center">
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+          <label for="fname">First name:</label>
+             <input type="text" id="fname" name="fname">
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 card my-4 d-flex justify-content-center text-center z-depth-5" contenteditable></div> 
+        </div>
+    </div>
       </section>
       
      <footer class="container-fluid  pt-4 pb-2">
