fix responsiveness issue with form

--- a/index.html
+++ b/index.html
@@ -71,87 +71,88 @@
 
        <section id="create">
           <div class="container mt-5" >
+              <h1 class="text-center ">Create Game</h1>
               <form>
 <div class="row d-flex justify-content-center">
-    <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word One">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Two">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Three">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Four">
     </div>
-     <div class="col-lg-6 offset-lg-3 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 offset-lg-3  col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link One" >
     </div>
-    <div class="col-lg-3  col-md-2 col-sm-2 col-xs-2 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
     </div>
     
 
 
-    <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Five">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Six">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Seven">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Eight">
     </div>
-     <div class="col-lg-6 offset-lg-3 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 offset-lg-3  col-sm-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link Two" >
     </div>
-    <div class="col-lg-3  col-md-2 col-sm-2 col-xs-2 my-5 test">
-      <input type="text" class="form-control" placeholder="asdasdasdadasd" >
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
+      <input type="text" class="form-control"  >
     </div>
 
 
 
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Nine">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Ten">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Eleven">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Twelve">
     </div>
-     <div class="col-lg-6 offset-lg-3 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 offset-lg-3  col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link Three" >
     </div>
-    <div class="col-lg-3  col-md-2 col-sm-2 col-xs-2 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
     </div>
 
 
 
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Thirteen">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Fourteen">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word Fifteen">
     </div>
-     <div class="col-lg-6 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
        <input type="text" class="form-control" placeholder="Word Sixteen">
     </div>
-     <div class="col-lg-6 offset-lg-3 col-md-2 col-sm-2 col-xs-2 my-3">
+     <div class="col-lg-6 offset-lg-3   col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link Four" >
     </div>
-    <div class="col-lg-3  col-md-2 col-sm-2 col-xs-2 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
     </div>
     
