update form validation

--- a/form.html
+++ b/form.html
@@ -39,19 +39,19 @@
               <form method="post" autocomplete="off" name="google-sheet" id="myForm">
 <div class="row d-flex justify-content-center">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word One" name="Word_1">
+      <input type="text" class="form-control" placeholder="Word One" name="Word_1" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Two" name="Word_2">
+       <input type="text" class="form-control" placeholder="Word Two" name="Word_2" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Three" name="Word_3">
+      <input type="text" class="form-control" placeholder="Word Three" name="Word_3" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Four" name="Word_4">
+       <input type="text" class="form-control" placeholder="Word Four" name="Word_4" required>
     </div>
      <div class="col-lg-6 offset-lg-3  col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Link One" name="Link_1" >
+      <input type="text" class="form-control" placeholder="Link One" name="Link_1" required>
     </div>
     <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
@@ -60,19 +60,19 @@
 
 
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Five" name="Word_5">
+      <input type="text" class="form-control" placeholder="Word Five" name="Word_5" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Six" name="Word_6">
+       <input type="text" class="form-control" placeholder="Word Six" name="Word_6" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Seven" name="Word_7">
+      <input type="text" class="form-control" placeholder="Word Seven" name="Word_7" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Eight" name="Word_8">
+       <input type="text" class="form-control" placeholder="Word Eight" name="Word_8" required>
     </div>
      <div class="col-lg-6 offset-lg-3  col-sm-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Link Two" name="Link_2">
+      <input type="text" class="form-control" placeholder="Link Two" name="Link_2" required>
     </div>
     <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
       <input type="text" class="form-control"  >
@@ -81,40 +81,40 @@
 
 
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Nine" name="Word_9">
+      <input type="text" class="form-control" placeholder="Word Nine" name="Word_9" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Ten" name="Word_10">
+       <input type="text" class="form-control" placeholder="Word Ten" name="Word_10" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Eleven" name="Word_11">
+      <input type="text" class="form-control" placeholder="Word Eleven" name="Word_11" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Twelve" name="Word_12">
+       <input type="text" class="form-control" placeholder="Word Twelve" name="Word_12" required>
     </div>
      <div class="col-lg-6 offset-lg-3  col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Link Three" name="Link_3" >
+      <input type="text" class="form-control" placeholder="Link Three" name="Link_3" required>
     </div>
     <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
-      <input type="text" class="form-control" placeholder="asdasdasdadasd" >
+      <input type="text" class="form-control" >
     </div>
 
 
 
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Thirteen" name="Word_13">
+      <input type="text" class="form-control" placeholder="Word Thirteen" name="Word_13" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Fourteen" name="Word_14">
+       <input type="text" class="form-control" placeholder="Word Fourteen" name="Word_14" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Word Fifteen" name="Word_15">
+      <input type="text" class="form-control" placeholder="Word Fifteen" name="Word_15" required>
     </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
-       <input type="text" class="form-control" placeholder="Word Sixteen" name="Word_16">
+       <input type="text" class="form-control" placeholder="Word Sixteen" name="Word_16" required>
     </div>
      <div class="col-lg-6 offset-lg-3   col-md-6 col-sm-6 col-xs-6 my-3">
-      <input type="text" class="form-control" placeholder="Link Four"  name="Link_4">
+      <input type="text" class="form-control" placeholder="Link Four"  name="Link_4" required>
     </div>
     <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
