add repsonse message when form is submitted

--- a/form.html
+++ b/form.html
@@ -35,8 +35,12 @@
             </nav>
        <section id="create">
           <div class="container mt-5" >
-              <h1 class="text-center ">Create Game</h1>
-              <form method="post" autocomplete="off" name="google-sheet" id="myForm">
+              <div class="hidden" id="reply">
+                  <h1 class="text-center my-5">Thank You!</h1>
+                  <h4 class="my-5">Your game submission is under review and will be added if it has met all of our criteria</h4>
+              </div>
+              <form method="post" autocomplete="off" name="google-sheet" id="myForm" >
+                   <h1 class="text-center ">Create Game</h1>
 <div class="row d-flex justify-content-center">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Word One" name="Word_1" required>
@@ -53,7 +57,7 @@
      <div class="col-lg-6 offset-lg-3  col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link One" name="Link_1" required>
     </div>
-    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 hide">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
     </div>
     
@@ -74,7 +78,7 @@
      <div class="col-lg-6 offset-lg-3  col-sm-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link Two" name="Link_2" required>
     </div>
-    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 hide">
       <input type="text" class="form-control"  >
     </div>
 
@@ -95,7 +99,7 @@
      <div class="col-lg-6 offset-lg-3  col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link Three" name="Link_3" required>
     </div>
-    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 hide">
       <input type="text" class="form-control" >
     </div>
 
@@ -116,7 +120,7 @@
      <div class="col-lg-6 offset-lg-3   col-md-6 col-sm-6 col-xs-6 my-3">
       <input type="text" class="form-control" placeholder="Link Four"  name="Link_4" required>
     </div>
-    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 test">
+    <div class="col-lg-3  col-md-6 col-sm-6 col-xs-6 my-5 hide">
       <input type="text" class="form-control" placeholder="asdasdasdadasd" >
     </div>
     
