--- a/form.html
+++ b/form.html
@@ -22,10 +22,10 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">Play Game</a>
+                        <a class="nav-link" href="index.html">About</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#play">How To Play</a>
+                        <a class="nav-link" href="game.html">Play Game</a>
                      </li>
                      <li class="nav-item active">
                         <a class="nav-link" href="form.html">Add Game<span class="sr-only">(current)</span></a>
