--- a/game.html
+++ b/game.html
@@ -21,11 +21,11 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
-                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="game.html">Play Game</a>
+                        <a class="nav-link" href="index.html">About</a>
+                     </li>
+                     <li class="nav-item active">
+                        <a class="nav-link" href="game.html">Play Game<span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="form.html">Add Game</a>
