add acknowledgements section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 </div>
                  <div class="col-lg-12">
          <h1 class="text-center about my-5">Acknowledgements</h1>
+         <p class="text-center">This Game is inspired by the BBC gameshow Only Connect</p>
+         <p class="text-center">I created this game  for my second milestone project for The Code Institute's  Diploma in Software Development course</p>
      </div>
               </div>
     
