--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" />
     <!-- Custom CSS styling -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <div class="main-container">
