--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
       <!-- Font Awesome -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" type="text/css" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" />
     <!-- Custom CSS styling -->
@@ -121,13 +122,9 @@
 </form>
           </div>
       
-     <footer class="container-fluid  pt-4 pb-2">
+          <footer class="container-fluid  pt-4 pb-2">
             <div class="row">
-               <div class="col-sm-4">
-                  <h5 class="footer-text">© 2021 Copyright: Word Connect</h5>
-               </div>
-               <div class="col-sm-4 offse ">
-                  <h5 class="footer-text">Social Media:</h5>
+               <div class="col-sm-12 col-lg-12 col-md-12 d-flex justify-content-center">
                   <ul class="list-inline social-links">
                      <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com/">
@@ -149,6 +146,7 @@
                      </li>
                   </ul>
                </div>
+               
             </div>
          </footer>
          </div>
