--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
       <!-- Font Awesome -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" type="text/css" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" />
     <!-- Custom CSS styling -->
@@ -56,36 +57,33 @@
            
         </div>
     </div>  
-     <footer class="container-fluid  pt-4 pb-2">
-            <div class="row">
-               <div class="col-sm-4">
-                  <h5 class="footer-text">© 2021 Copyright: Word Connect</h5>
-               </div>
-               <div class="col-sm-4 offse ">
-                  <h5 class="footer-text">Social Media:</h5>
-                  <ul class="list-inline social-links">
-                     <li class="list-inline-item">
-                        <a target="_blank" href="https://www.facebook.com/">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                        </a>
-                     </li>
-                     <li class="list-inline-item">
-                        <a target="_blank" href="https://twitter.com/">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                        <span class="sr-only">Twiitter</span>
-                        </a>
-                     </li>
-                     <li class="list-inline-item">
-                        <a target="_blank" href="https://www.instagram.com/">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                        </a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </footer>
+    <footer class="container-fluid  pt-4 pb-2">
+      <div class="row">
+         <div class="col-sm-12 col-lg-12 col-md-12 d-flex justify-content-center">
+            <ul class="list-inline social-links">
+               <li class="list-inline-item">
+                  <a target="_blank" href="https://www.facebook.com/">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                  <span class="sr-only">Facebook</span>
+                  </a>
+               </li>
+               <li class="list-inline-item">
+                  <a target="_blank" href="https://twitter.com/">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                  <span class="sr-only">Twiitter</span>
+                  </a>
+               </li>
+               <li class="list-inline-item">
+                  <a target="_blank" href="https://www.instagram.com/">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <span class="sr-only">Instagram</span>
+                  </a>
+               </li>
+            </ul>
+         </div>
+         
+      </div>
+   </footer>
          </div>
  <!-- JQuery -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
