--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="text-center">Each Game will be a maximum of 5 Mintues long </p>
                     <p class="text-center">You will only have 3 lives after you have gotten 2 correct connections</p>
                     <p class="text-center">Each correct connection is worth 1 point</p>
-                    <p class="text-center">each connection is linked by one word</p>
+                    <p class="text-center">Each connection is linked by one word</p>
                 </div>
                  <div class="col-lg-12">
          <h1 class="text-center about my-5">Acknowledgements</h1>
