--- a/game.html
+++ b/game.html
@@ -36,13 +36,13 @@
             </nav>
     <div class="container mt-5" >
        <div class="row top-line">
-           <div class="col-lg-2 offset-lg-1 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
+           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
                 <h5><span id="time">05:00</span></h5>
            </div>
-           <div class="col-lg-2 offset-lg-2 col-md-4 col-sm-4 col-xs-4  d-flex justify-content-center">
+           <div class="col-lg-4  col-md-4 col-sm-4 col-xs-4  d-flex justify-content-center">
                <h5>Score: <span id="score">0</span></h5>
            </div>
-           <div class="col-lg-2 offset-lg-2 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
+           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 d-flex justify-content-center">
                 <h5 >Lives:   <i class="fas fa-heart 1"></i>   <i class="fas fa-heart 2"></i>   <i class="fas fa-heart 3"></i></h5>
            </div>
         </div>
