--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <div class="col-lg-12">
                         <h1 class="text-center about mb-5">How To Play</h1>
                          <p class="text-center">Begin by pressing the play button, after this 16 tiles with different words will appear and a timer will start to count down.
-                            you can now click on these tiles to check if they are connected
+                            You can now click on these tiles to check if they are connected
                         </p>
-                        <p class="text-center">There are 4 words in each group of connections so there will be a total of 4 groups, To check if words are connected you simply click on four tiles, once you click on the tile they will turn yellow to show that the tile has been selected,
+                        <p class="text-center">There are 4 words in each group of connections so there will be a total of 4 groups, To check if words are connected you simply click on four tiles, once you click on a tile they will turn yellow to show that the tile has been selected,
                             once you click the 4th tile the game will check if you have gotten a correct answer or an incorrect answer
                             if your answer is correct the tiles will move to the top and turn green, if your answer is incorrect the tiles will go back to the normal colour 
                         </p>
