Fix console error because of js

--- a/form.html
+++ b/form.html
@@ -159,5 +159,6 @@
     <!-- MDB core JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>    
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/form.js"></script>
 </body>
 </html>
