--- a/form.html
+++ b/form.html
@@ -11,6 +11,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet" />
     <!-- Custom CSS styling -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/imgs/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/imgs/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/imgs/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Form</title>
 </head>
 <body>
