--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="container h2p">
                     <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="text-center about mb-5">How To Play</h1>
+                        <h1 class="text-center about mb-5 bounce-in-top">How To Play</h1>
                          <p class="text-center">Begin by pressing the play button, after this 16 tiles with different words will appear and a timer will start to count down.
                             You can now click on these tiles to check if they are connected
                         </p>
@@ -55,15 +55,17 @@
                         <p  class="text-center">Once you have guess all four links your score will appear and the game will end, you are able to start again and try to beat your score, The highest score possible is 8.</p>
                     </div>
                 </div>
+                <h1 class="rule my-5"><span>?</span></h1>
                 <div class="col-lg-12">
-                    <h1 class="text-center about my-5">Rules</h1>
+                    <h1 class="text-center about my-5 bounce-in-top">Rules</h1>
                     <p class="text-center">Each Game will be a maximum of 5 Mintues long </p>
                     <p class="text-center">You will only have 3 lives after you have gotten 2 correct connections</p>
                     <p class="text-center">Each correct connection is worth 1 point</p>
                     <p class="text-center">Each connection is linked by one word</p>
                 </div>
+                <h1 class="rule my-5"><span>?</span></h1>
                  <div class="col-lg-12">
-         <h1 class="text-center about my-5">Acknowledgements</h1>
+         <h1 class="text-center about my-5 bounce-in-top">Acknowledgements</h1>
          <p class="text-center">This Game is inspired by the BBC gameshow Only Connect</p>
          <p class="text-center">I created this game  for my second milestone project for The Code Institute's  Diploma in Software Development course</p>
      </div>
